--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "decrypt": "0.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.5.11",
     "nodemon": "^1.19.0",
